ajout de l'api de la liste de tous les utilisateurs et l'api de la creation d'un utilisateur